move to java 8